--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <section class="character-area">
         <div class="heading"><h1>Choose your character</h1></div>
+        <hr>
         <div class="character-selection">
             <div class="character-type"><p>Business Marius</p></div>
             <div class="character-type"><p>Casual Marius</p></div>
@@ -88,6 +89,7 @@
             <div class="current-quest">
                 <div class="otto-wilde">
                     <div class="employer">
+                        <img class="logo" src="./imgs/owg.png" alt="">
                         <h3>Otto Wilde Grillers GmbH</h3>
                         <p>From October 2018</p>
                     </div>
@@ -100,14 +102,17 @@
                         </ul>
                     </div>
                 </div>
-                <hr>
+         </div>
+        </div>
+        <div class="completed-quest-heading">
+            <img src="http://pixelartmaker-data-78746291193.nyc3.digitaloceanspaces.com/image/22b22848ea88550.png" alt="pokal">
+            <h2>Completed Quests</h2>
+        </div>
+        <div class="quests-two"> 
             <div class="completed-quests">
-                <div class="completed-quest-heading">
-                    <img src="http://pixelartmaker-data-78746291193.nyc3.digitaloceanspaces.com/image/22b22848ea88550.png" alt="pokal">
-                    <h2>Completed Quests</h2>
-                </div>
                 <div class="KPMG">
                     <div class="employer">
+                        <img class="kpmg-logo" src="./imgs/KPMG.png" alt="">
                         <h3>KPMG Deutschland</h3>
                         <p>November 2015 - August 2017</p>
                     </div>
@@ -122,6 +127,7 @@
                 <hr class="hr-small">
                 <div class="KPMG">
                     <div class="employer">
+                        <img class="kpmg-logo" src="./imgs/KPMG.png" alt="">
                         <h3>KPMG Deutschland</h3>
                         <p>July 2015 - September 2015</p>
                     </div>
