--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <div class="heading"><h1>Choose your character</h1></div>
         <hr>
         <div class="character-selection">
-            <div class="character-type"><p>Business Marius</p></div>
-            <div class="character-type"><p>Casual Marius</p></div>
+            <div class="character-type char-button"><p>Business Marius</p></div>
+            <div class="character-type char-button"><p>Casual Marius</p></div>
         </div>
         <div class="character">
                 <div class="character-info">
@@ -41,17 +41,19 @@
 
 
         <div class="traits-heading">
-            <img src="imgs/Buch.png" alt="">
-            <h2>Character Skills</h2>
+            <div class="traits-heading-bg">
+                <img src="imgs/Buch.png" alt="">
+                <h2>Character Skills</h2>
+            </div>
         </div>
         <div class="character-eigenschaften">
             <div class="traits">
-                <i class="fas fa-check-circle"></i><div>Get things done mentality</div>
-                <i class="fas fa-graduation-cap"></i><div>Quick learner / High will to learn</div>
-                <i class="fas fa-user-friends"></i><div>Teamplayer</div>
-                <i class="fas fa-crosshairs"></i><div>100% committment to the company/product</div>
+                <div class="icon-text-grid"><i class="fas fa-check-circle"></i><div>Get things done mentality</div></div>
+                <div class="icon-text-grid"><i class="fas fa-graduation-cap"></i><div>Quick learner / High will to learn</div></div>
+                <div class="icon-text-grid"><i class="fas fa-user-friends"></i><div>Teamplayer</div></div>
+                <div class="icon-text-grid"><i class="fas fa-crosshairs"></i><div>100% committment to the company/product</div></div>
             </div>
-            <hr class="">
+            <div class="vertical-line"></div>
             <div class="skills">
                 <div class="skill-box">
                     <p>Project Management</p>
@@ -82,16 +84,18 @@
     </section>
     <section class="quest-section">
         <div class="current-quest-heading">
-            <img src="imgs/Ausrufezeichen.png" alt="exclamation point">
+            <div class="traits-heading-bg">
+                <img src="imgs/Ausrufezeichen.png" alt="exclamation point">
             <h2>Current Quest</h2>
+            </div>
         </div>
         <div class="quests">
             <div class="current-quest">
                 <div class="otto-wilde">
                     <div class="employer">
-                        <img class="logo" src="./imgs/owg.png" alt="">
                         <h3>Otto Wilde Grillers GmbH</h3>
-                        <p>From October 2018</p>
+                        <p>Since October 2018</p>
+                        <img class="logo" src="./imgs/owg.png" alt="">
                     </div>
                     <div class="job-description">
                         <h3>Sales Manager DACH and International Business Development</h3>
@@ -104,17 +108,19 @@
                 </div>
          </div>
         </div>
-        <div class="completed-quest-heading">
-            <img src="http://pixelartmaker-data-78746291193.nyc3.digitaloceanspaces.com/image/22b22848ea88550.png" alt="pokal">
-            <h2>Completed Quests</h2>
+        <div class="current-quest-heading">
+            <div class="traits-heading-bg">
+                <img src="http://pixelartmaker-data-78746291193.nyc3.digitaloceanspaces.com/image/22b22848ea88550.png" alt="pokal">
+                <h2>Completed Quests</h2>
+            </div>
         </div>
         <div class="quests-two"> 
             <div class="completed-quests">
                 <div class="KPMG">
                     <div class="employer">
-                        <img class="kpmg-logo" src="./imgs/KPMG.png" alt="">
                         <h3>KPMG Deutschland</h3>
                         <p>November 2015 - August 2017</p>
+                        <img class="kpmg-logo" src="./imgs/KPMG.png" alt="">
                     </div>
                     <div class="job-description">
                         <h3>Working Student - Finance and Treasury Management (Risk Management)</h3>
@@ -127,9 +133,9 @@
                 <hr class="hr-small">
                 <div class="KPMG">
                     <div class="employer">
-                        <img class="kpmg-logo" src="./imgs/KPMG.png" alt="">
                         <h3>KPMG Deutschland</h3>
                         <p>July 2015 - September 2015</p>
+                        <img class="kpmg-logo" src="./imgs/KPMG.png" alt="">
                     </div>
                     <div class="job-description">
                         <h3>Intern - Financial Advisory (Treasury Consulting)</h3>
@@ -143,6 +149,7 @@
                     <div class="employer">
                         <h3>EY - Ernst & Young</h3>
                         <p>April 2015 - June 2015</p>
+                        <img class="kpmg-logo" src="./imgs/KPMG.png" alt="">
                     </div>
                     <div class="job-description">
                         <h3>Intern - Audit</h3>
@@ -156,6 +163,7 @@
                     <div class="employer">
                         <h3>Deutsche Telekom AG</h3>
                         <p>October 2014 - March 2015</p>
+                        <img class="kpmg-logo" src="./imgs/KPMG.png" alt="">
                     </div>
                     <div class="job-description">
                         <h3>Intern - Treasury, Financial Management</h3>
