--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <section class="character-area">
-        <div class="heading"><h1>Choose your character</h1></div>
+        <div class="heading"><h1>Choose your character!</h1></div>
         <hr>
         <div class="character-selection">
             <div id="button-one" class="character-type char-button"><p>Business Marius</p></div>
