added mobile view

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <div class="completed-quests">
                 <div class="KPMG">
                     <div class="employer">
-                        <h3>KPMG Deutschland</h3>
+                        <h3>KPMG</h3>
                         <p>November 2015 - August 2017</p>
                     </div>
                     <div class="job-description">
@@ -137,7 +137,7 @@
                 <hr class="hr-small">
                 <div class="KPMG">
                     <div class="employer">
-                        <h3>KPMG Deutschland</h3>
+                        <h3>KPMG</h3>
                         <p>July 2015 - September 2015</p>
                     </div>
                     <div class="job-description">
@@ -217,7 +217,7 @@
                 <hr class="hr-small">
                 <div class="tutorials">
                     <div class="employer">
-                        <h3>Kaufmännische Schulen Rheine</h3>
+                        <h3>Kfm. Schulen Rheine</h3>
                         <p>August 2008 - June 2011</p>
                     </div>
                     <div class="job-description">
