--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="index.html"><img src="imgs/Marius Logo.png" alt="" class="navLogo"></a>
             <div class="menu">
                 <a href="https://www.linkedin.com/in/marius-westers-6aba8783/" class="menuLink">LinkedIn</a>
-                <a href="" class="menuLink">Contact Me</a>
+                <a href="contact.html" class="menuLink">Contact Me</a>
                 <a href="" class="menuLink">My Projects</a>
                 <a href="aboutme.html" class="menuLink">About Me</a>
             </div>
