added projects page

--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/39a0a5e4f3.js" crossorigin="anonymous"></script>
     <script src="script.js" async></script>
-    <title>About Me</title>
+    <title>My Projects</title>
 </head>
 <body>
     <section class="navigation">
@@ -21,28 +21,18 @@
                 <a href="https://www.linkedin.com/in/marius-westers-6aba8783/" class="menuLink">LinkedIn</a>
                 <a href="contact.html" class="menuLink">Contact Me</a>
                 <a href="projects.html" class="menuLink">My Projects</a>
-                <a href="aboutme.html   " class="menuLink">About Me</a>
+                <a href="aboutme.html" class="menuLink">About Me</a>
             </div>
         </div>
     </section>
-    <section class="personalInfo">
-        <h1>Hi, my name is Marius Westers!</h1>
-        <h2>and this is what I look like in real life:</h2>
-        <div class="aboutButtons">
-            <button id="aboutButtonOne" class="char-button">Business Marius</button>
-            <button id="aboutButtonTwo" class="char-button">Casual Marius</button>
+    <h1 class="projectHeading">My Projects</h1>
+    <section class="projectGrid">
+        <div class="projects">
+            <div class="project"></div>
+            <div class="project"></div>
+            <div class="project"></div>
+            <div class="project"></div>
         </div>
-        <img class="realMarius" src="imgs/Marius mit Hund.jpg" alt="">
-        <div id="realMariusDescription" class="realMariusDescription">
-            <p>
-            I work in Business Development. I live currently in Düsseldorf, but my hometown is Emsdetten (near Münster).<br>
-            I love Music and play two Instruments (Guitar, Drums).<br>
-            I am a Gamer and dream of creating my own Videogame.<br>
-            During the first Covid Lockdown I started learning programming (I started with Web Dev/Front End).<br>
-            I love Dogs.<br>
-            </p>
-        </div>
-        
     </section>
 </body>
 </html>
