--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
                 <img src="imgs/Buch.png" alt="">
                 <h2>Character Skills</h2>
             </div>
+            <img src="imgs/Marius attack.gif" class="mariusAttack" id="mariusAttack" alt="">
         </div>
+
         <div class="character-eigenschaften">
             <div class="traits">
                 <div class="icon-text-grid"><img src="imgs/Checklist.png" alt="" class="skill-icons"><div id="skillOne">Get things done mentality</div></div>
