added headline and new JS Code

--- a/aboutme.html
+++ b/aboutme.html
@@ -34,8 +34,8 @@
             <img src="imgs/Arrow.gif" alt="arrow" class="arrowGif" id="arrowGifTwo">
         </div>
         <div class="character-selection">
-            <div id="button-one" class="character-type char-button"><p>Business Marius</p></div>
-            <div id="button-two" class="character-type char-button"><p>Casual Marius</p></div>
+            <div id="button-three" class="character-type char-button"><p>Business Marius</p></div>
+            <div id="button-four" class="character-type char-button"><p>Casual Marius</p></div>
         </div>
         <div class="aboutInfo">
             <img class="realMarius" id="realMarius" src="imgs/Bewerbungsfoto Marius.jpg" alt="">
