--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <div id="button-one" class="character-type char-button"><p>Business Marius</p></div>
             <div id="button-two" class="character-type char-button"><p>Casual Marius</p></div>
         </div>
+        <div id="chosenCharacter" class="chosenChar">BUSINESS MARIUS</div>
         <div class="character">
                 <div class="character-info">
                     <div class="info-grid">
@@ -120,7 +121,7 @@
                         <img class="logo" src="imgs/OWG_fork.png" alt="Otto Wilde Logo" href="https://www.ottowildegrillers.com/">
                     </div>
                     <div class="job-description">
-                        <h3>Sales Manager DACH and International Business Development</h3>
+                        <h3 id="job-description">Sales Manager DACH and International Business Development</h3>
                         <ul>
                             <a href="https://www.ottowildegrillers.com/collections/flagshipstore"><li>Opening an innovative Flagship Store</li></a>
                             <li>Planning and implementation of a selective retail network for the DACH region</li>
